added simple 'remove' command (removes .yml file and stuff under work directory)
git-svn-id: http://cerberus.rubyforge.org/svn@157 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/credits.page
+++ b/doc/site/src/credits.page
@@ -5,8 +5,8 @@ orderInfo: 6
 ---
 h2. Credits
 
-There is you could find names of the people who made Cerberus tool available.
+The following people made notable contributions to the Cerberus tool: 
 
 * "Anatol Pomozov":http://pomozov.info - original creator of Cerberus tool
-* Xavier Shay - several patches related RSS publisher
+* Xavier Shay - several patches related to RSS publisher
 * Mark Noworolski - patches related to Subversion SCM
